# freegs4e_v0.12.0_nchc

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
freegs4e/: README.md  __init__.py  _aeqdsk.py  _divgeo.py  _geqdsk.py  bilinear_interpolation.py  boundary.py  coil.py  control.py  critical.py  critical_old.py  dump.py  equilibrium.py  fieldtracer.py  geqdsk.py  gradshafranov.py  jtor.py  machine.py  multi_coil.py  multigrid.py  optimise.py  optimiser.py  picard.py  plotting.py  polygons.py  quadrature.py  shaped_coil.py  test_aeqdsk.py  test_critical.py  test_equilibrium.py  test_geqdsk.py  test_jtor.py  test_machine.py  test_multi_coil.py  test_optimiser.py  test_polygons.py  test_quadrature.py  test_readwrite.py  test_shaped_coil.py
freegs4e.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
freegs4e/__pycache__/: bilinear_interpolation.biliint-11.py310.1.nbc  bilinear_interpolation.biliint-11.py310.2.nbc  bilinear_interpolation.biliint-11.py310.nbi  critical.inside_mask_-706.py310.1.nbc  critical.inside_mask_-706.py310.2.nbc  critical.inside_mask_-706.py310.nbi  critical.scan_for_crit-331.py310.1.nbc  critical.scan_for_crit-331.py310.nbi
