[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "freegs4e"
version = "0.12.0"
authors = [
    {name = "The FreeGS4E and FreeGS developers"}
]
description = "Free boundary tokamak plasma equilibrium Grad-Shafranov solver for time evolution"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent"
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements-dev.txt"] }}

[project.urls]
Homepage = "https://github.com/FusionComputingLab/freegs4e"

[tool.isort]
profile = "black"

[tool.black]
line-length = 79